[#175761379] Add Validate OTP base implementation
